--- a/lesson_basic_15_building_website/css/styles.css
+++ b/lesson_basic_15_building_website/css/styles.css
@@ -152,4 +152,55 @@ header {
   text-align: justify;
 }
 
+/* reader */
+.reader h1 {
+  text-align: center;
+}
+.reader p {
+  text-align: center;
+  color: #aaaaaa;
+}
+.reader .card img {
+  width: 10rem;
+  object-fit: cover;
+  margin: auto;
+  border-radius: 50%;
+  margin-top: 10px;
+}
+.reader .card .card-body h4,
+.reader .card .card-body h6 {
+  text-align: center;
+  color: #aaaaaa;
+}
+
+/* footer */
+.footer {
+  background: rgba(0, 0, 0, 0.815);
+  padding: 14vmin 18vmin;
+}
+.footer span {
+  color: #ff512f;
+}
+.footer input {
+  border: none !important;
+}
+.footer input *::placeholder {
+  color: white !important;
+}
+.footer .input-group-text {
+  background: linear-gradient(to bottom, #dd2476, #ff512f);
+}
+.footer .column i {
+  color: #dd2476;
+  padding: 0 0.5em;
+}
+.footer .sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.815);
+  z-index: 9999;
+  transition: all 1.5s ease;
+}
+
 /*# sourceMappingURL=styles.css.map */
