--- a/lesson_basic_15_building_website/main.scss
+++ b/lesson_basic_15_building_website/main.scss
@@ -42,9 +42,7 @@ header {
     }
   }
 }
-
 /* features */
-
 .cover {
   width: 100%;
   height: 55vmin;
@@ -156,5 +154,63 @@ header {
         text-align: justify;
       }
     }
+  }
+}
+/* reader */
+.reader {
+  h1 {
+    text-align: center;
+  }
+  p {
+    text-align: center;
+    color: #aaaaaa;
+  }
+  .card {
+    img {
+      width: 10rem;
+      object-fit: cover;
+      margin: auto;
+      border-radius: 50%;
+      margin-top: 10px;
+    }
+    .card-body {
+      h4,
+      h6 {
+        text-align: center;
+        color: #aaaaaa;
+      }
+    }
+  }
+}
+/* footer */
+
+.footer {
+  background: rgba(0, 0, 0, 0.815);
+  padding: 14vmin 18vmin;
+  span {
+    color: #ff512f
+  }
+  input {
+    border: none !important;
+    *::placeholder {
+      color: white !important;
+    }
+  }
+  .input-group-text {
+    background:  $bg-gradient;
+  }
+  .column {
+    i {
+      color: #dd2476;
+      padding: 0 0.5em;
+    }
+  }
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.815);
+    z-index: 9999;
+    transition: all 1.5s ease;
   }
 }
